# RT_otree_projects

./: .gitignore  pyproject.toml  requirements.txt  settings.py
_static/click_competition/: progress_bar.css
click_competition/: ClickPage.html  Results.html  __init__.py  data.csv  send_data_to_slack.py  tests.py  tk.txt
docs/get_doc_links/: extracted_links.txt  generate_urls.py  get_links.py  res_links.txt
prestige_sd/: TODO  __init__.py  tests.py
simple_sd/: Results.html  __init__ copy.py  __init__.py  __init__prev.py  payoff_caluculator.py
simple_tg/: Send.html  SendBack.html  __init__.py
src/otree_pj_rt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
user_friendly_sd/: __init__.py
